--- a/papers/ipc2011/ipc2011.bib
+++ b/papers/ipc2011/ipc2011.bib
@@ -304,7 +304,7 @@
 @InProceedings{ BibEvoCop2009,
 	author = "J. Bibai and P. Sav{\'e}ant and M. Schoenauer",
 	title = "{Divide-And-Evolve Facing State-of-the-Art Temporal Planners during the $6^{th}$ International Planning Competition}",
-	booktitle = "Ninth European Conference on Evolutionary Computation in Combinatorial Optimization (EvoCOP 2009)",
+	booktitle = "EvoCOP'09)",
 	year = "2009",
 	pages = "133--144",
 	x-cle-support = "EvoCOP",
@@ -312,7 +312,7 @@
 	x-support = "actes",
 	x-theme = "complex",
 	x-type = "article",
-	series = "Lecture Notes in Computer Science",
+	series = "LNCS",
 	number = "5482",
 	editor = "C. Cotta and P. Cowling",
 	publisher = "Springer-Verlag",
@@ -836,8 +836,7 @@
 @InProceedings{ Montero:2010,
 	author = "Elizabeth Montero and Mar{\'i}a-Cristina Riff and Bertrand Neveu",
 	title = "An evaluation of off-line calibration techniques for evolutionary algorithms",
-	booktitle = "Proceedings of the 12th annual conference on Genetic and evolutionary computation",
-	series = "GECCO '10",
+	booktitle = "Proc. ACM-GECCO",
 	year = "2010",
 	isbn = "978-1-4503-0072-8",
 	location = "Portland, Oregon, USA",
@@ -847,7 +846,6 @@
 	doi = "http://doi.acm.org/10.1145/1830483.1830540",
 	acmid = "1830540",
 	publisher = "ACM",
-	address = "New York, NY, USA",
 	keywords = "evolutionary algorithms, parameter setting problem"
 }
 
@@ -869,8 +867,15 @@
 }
 
 @InProceedings{ Bardenet,
-	author = "R. Bardenet and B. Kégl",
+	author = "R. Bardenet and B. K{\'e}gl",
 	title = "Surrogating the surrogate: accelerating Gaussian-process-based global optimization with a mixture cross-entropy algorithm",
 	booktitle = "Proceedings of the 27th International Conference on Machine Learning (ICML 2010)",
+	year = "2010",
+}
+
+@InProceedings{ Qiang,
+	author = "X. Qiang and G. Cheng and Zh. Wang",
+	title = "An overview of some classical Growing Neural Networks and new developments",
+	booktitle = "Proceedings of the 2nd International Conference on Education Technology and Computer (ICETC)",
 	year = "2010",
 }
