--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -221,7 +221,7 @@ Grid & ~2 -- 24 & 66 -- ~6  & 16 -- 11 & 17 -- ~5  &    \\
 Mprime &  ~2 -- 45& 59 -- 36 & ~2 -- 11  & 18 -- ~8  &    \\
 \hline
 \end{tabular}
-\caption{For each method (default, CMA-ES, Genetransferer or ANN), the percentage of instances on which this method gave the best parameter set. Each cell shows 2 figures: the first one considers all occurences of a method, no matter if another method also lead to the same parameter set. The second figures only considers the first method (from left to right) that discovered the best parameter-set.}
+\caption{For each method (default, CMA-ES, Genetransferer or ANN), the percentage of instances on which this method gave the best parameter set. Each cell shows 2 figures: the first one considers all occurences of a method, no matter if another method also lead an equivalent parameter set, as good as the first one. The second figures only considers the first method (from left to right) that discovered the best parameter-set.}
 \label{table:hints}
 \end{table} 
 
